--- a/index.html
+++ b/index.html
@@ -1,46 +1,85 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<script type="text/javascript" src="./frontend/scriptusu.js"></script>
+    <meta charset="UTF-8">
+    <title>Gestión de Usuarios</title>
+    <script type="text/javascript" src="./frontend/scriptusu.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        form {
+            background-color: #f5f5f5;
+            padding: 20px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        label {
+            display: inline-block;
+            width: 150px;
+            margin-bottom: 5px;
+        }
+        input[type="text"] {
+            padding: 8px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            width: 250px;
+        }
+        input[type="submit"] {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+        #rta {
+            margin-top: 10px;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+    </style>
 </head>
 <body>
- 
-<h1>Adicionar Usuario</h1>
-<div>
-<form id="adicionarEstudiante">
-<div>
-<label for="dni">Documento de identidad:</label>
-<input type="text" id="dni" placeHolder="" value="000000">
-<br>
- 
+    <h1>Adicionar Usuario</h1>
+    <form id="adicionarEstudiante" onsubmit="guardar(event)">
+        <div class="form-group">
+            <label for="dni">Documento de identidad:</label>
+            <input type="text" id="dni" required>
+        </div>
+        <div class="form-group">
             <label for="nombre">Nombres:</label>
-<input type="text" id="nombre" placeHolder="">
-<br>
- 
+            <input type="text" id="nombre" required>
+        </div>
+        <div class="form-group">
             <label for="apellidos">Apellidos:</label>
-<input type="text" id="apellidos" placeHolder="">
-<br>
- 
+            <input type="text" id="apellidos" required>
+        </div>
+        <div class="form-group">
             <label for="correo">Email:</label>
-<input type="text" id="correo" placeHolder="" value="">
-<br>
-<br>
-<br>
-<input type="submit" onclick="guardar()" value="Aceptar">
-</div>
-</form>
- 
-</div>
-<h1>Listar un usuario</h1>
-<div>
-<form id="listarEstudiantes">
-<label for="numdoc">Nombre del documento</label>
-<input type="text" id="numdoc">
-<p id="rta">Resultado:</p>
-<input type="submit" onclick="listar()" value="Aceptar">
-</form>
-</div>
- 
+            <input type="email" id="correo" required>
+        </div>
+        <input type="submit" value="Aceptar">
+    </form>
+
+    <h1>Listar un usuario</h1>
+    <form id="listarEstudiantes" onsubmit="listar(event)">
+        <div class="form-group">
+            <label for="numdoc">Número de documento:</label>
+            <input type="text" id="numdoc" required>
+        </div>
+        <input type="submit" value="Buscar">
+        <div id="rta">Resultado:</div>
+    </form>
 </body>
 </html>
